# 2GISTestTask

./: 2GisTest.cpp  ArgumentParser.cpp  ArgumentParser.h  Arguments.cpp  Arguments.h  CMakeLists.txt  Logic.cpp  Logic.h  README.md  Test_words.txt
